lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__stmt_expr.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"a;\", |p| p.stmt_expr())"
---
EXPR_STMT: 0..2 
  NAME_EXPR: 0..1 
    NAME: 0..1 
      IDENT: 0..1 "a"
  SEMI: 1..2 ";"
