lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__stmt_let.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"let x = 1;\", |p| p.stmt_let())"
---
LET_STMT: 0..10 
  LET_KW: 0..3 "let"
  WHITESPACE: 3..4 
  NAME_PAT: 4..5 
    NAME: 4..5 
      IDENT: 4..5 "x"
  WHITESPACE: 5..6 
  EQ: 6..7 "="
  WHITESPACE: 7..8 
  LIT_EXPR: 8..9 
    INT: 8..9 "1"
  SEMI: 9..10 ";"
