lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__strct.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"struct Vec2 {x: Y, y: Y }\", |p| p.struct_item())"
---
STRUCT_ITEM: 0..25 
  STRUCT_KW: 0..6 "struct"
  WHITESPACE: 6..7 
  NAME: 7..12 
    IDENT: 7..11 "Vec2"
    WHITESPACE: 11..12 
  FIELD_LIST: 12..24 
    L_BRACE: 12..13 "{"
    FIELD: 13..17 
      NAME: 13..14 
        IDENT: 13..14 "x"
      COLON: 14..15 ":"
      WHITESPACE: 15..16 
      PATH_TYPE: 16..17 
        PATH: 16..17 
          IDENT: 16..17 "Y"
    COMMA: 17..18 ","
    WHITESPACE: 18..19 
    FIELD: 19..24 
      NAME: 19..20 
        IDENT: 19..20 "y"
      COLON: 20..21 ":"
      WHITESPACE: 21..22 
      PATH_TYPE: 22..24 
        PATH: 22..24 
          IDENT: 22..23 "Y"
          WHITESPACE: 23..24 
  R_BRACE: 24..25 "}"
