lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__struct_item-3.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"struct X { a: root::a::b::c }\", |p| p.struct_item())"
---
STRUCT_ITEM: 0..29 
  STRUCT_KW: 0..6 "struct"
  WHITESPACE: 6..7 
  NAME: 7..8 
    IDENT: 7..8 "X"
  WHITESPACE: 8..9 
  L_BRACE: 9..10 "{"
  WHITESPACE: 10..11 
  FIELD: 11..27 
    NAME: 11..12 
      IDENT: 11..12 "a"
    COLON: 12..13 ":"
    WHITESPACE: 13..14 
    PATH_TYPE: 14..27 
      PATH: 14..27 
        PATH_SEGMENT: 14..18 
          ROOT_KW: 14..18 "root"
        COLON: 18..19 ":"
        COLON: 19..20 ":"
        PATH_SEGMENT: 20..21 
          IDENT: 20..21 "a"
        COLON: 21..22 ":"
        COLON: 22..23 ":"
        PATH_SEGMENT: 23..24 
          IDENT: 23..24 "b"
        COLON: 24..25 ":"
        COLON: 25..26 ":"
        PATH_SEGMENT: 26..27 
          IDENT: 26..27 "c"
  WHITESPACE: 27..28 
  R_BRACE: 28..29 "}"
