lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__struct_item-4.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"struct Generic<A,B,C> {}\", |p| p.struct_item())"
---
STRUCT_ITEM: 0..24 
  STRUCT_KW: 0..6 "struct"
  WHITESPACE: 6..7 
  NAME: 7..14 
    IDENT: 7..14 "Generic"
  GENERICS: 14..21 
    LT: 14..15 "<"
    TYPE_PARAM: 15..16 
      IDENT: 15..16 "A"
    COMMA: 16..17 ","
    TYPE_PARAM: 17..18 
      IDENT: 17..18 "B"
    COMMA: 18..19 ","
    TYPE_PARAM: 19..20 
      IDENT: 19..20 "C"
    GT: 20..21 ">"
  WHITESPACE: 21..22 
  L_BRACE: 22..23 "{"
  R_BRACE: 23..24 "}"
