lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__temp.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\" (Vec::new < 1 )  > ()\", |p| p.expr())"
---
WHITESPACE: 0..1
